<resources>
    <string name="app_name">Visitech</string>
    <string name="Welcome">Welcome</string>
    <string name="list">List Of Patients</string>
    <string name="info">Info</string>
    <string name="add_patient">Add New Patient</string>
    <string name="user">User</string>
    <string name="home">Home</string>
    <string name="infoText">Hello everyone,\n\nVisitech is a project developed by Mohammad Goudarzi Moghadam during the course of \"Medizinische IT-Anwendungen\" at the Leibniz University Hannover.\nVisitech is the concept of an application, which helps the staff of a hospital with their visits from patients. The application is still in development.\n\nStay tuned... :)</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="loginBtn">Login</string>
    <string name="forgot">Forgot Password!</string>
    <string name="tmp">Line1</string>
    <string name="patients">Patients</string>
    <string name="medications">Medications</string>
    <string name="chaeckups">Checkups</string>
    <string name="description">Description:</string>
    <string name="findings">Findings:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>